# Pipe_Crawler_IMU_simulation

./: README.md
Asio_client_server/: CMakeLists.txt  README.md  async_server_2.cpp  client.cpp
IMU_client/: CMakeLists.txt  client_IMU.cpp  main.cpp
IMU_client/lib/: i2c_bno055.c  i2c_imu.cpp  i2c_multiplexer.c  sender.cpp
IMU_client/lib/include/: getbno055.h  i2c_imu.h  i2c_multiplexer.h  sender.h
IMU_simulation/: CMakeLists.txt  README.md  main.cpp
Simulation_lib/: CMakeLists.txt  main.cpp
Simulation_lib/lib/: sim.cpp
Simulation_lib/lib/include/: sim.h
server_IMU/: CMakeLists.txt  async_server_3.cpp  main.cpp  server_IMU.cpp
server_IMU/lib/: IMU_server.cpp
server_IMU/lib/include/: IMU_server.h
